<resources>
    <string name="app_name">NewBibit</string>
    <string name="title_card_1_home">Pilih Reksadana Sendiri</string>
    <string name="sub_title_card_1_home">Untuk yang pede bangun portofolio investasi sendiri</string>
    <string name="title_card_2_home">Sekarang Kamu Bisa Nabung Rutin</string>
    <string name="sub_title_card_2_home">Jadwalkan pembelian rutin reksa danamu setiap bulan.</string>
    <string name="title_card_3_home">Gift Card Reksadana</string>
    <string name="sub_title_card_3_home">Hadiahkan reksa dana ke teman dan keluarga kamu di hari spesial mereka.</string>
    <string name="title_card_4_home">Tips Untuk Kamu</string>
    <string name="desc_icon_rdpu">icon_rdpu</string>
    <string name="desc_icon_rds">icon_rds</string>
    <string name="desc_icon_rdpt">icon_rdpt</string>
    <string name="pasar_uang">Pasar Uang</string>
    <string name="obligasi">Obligasi</string>
    <string name="saham">Saham</string>
    <string name="desc_calendar">desc_calendar</string>
    <string name="desc_right_arrow">desc_right_arrow</string>
    <string name="desc_gift">desc_gift</string>
    <string name="nav_home">Home</string>
    <string name="nav_portofolio">Portofolio</string>
    <string name="nav_transaction">Transaksi</string>
    <string name="nav_support">Support</string>
    <string name="nav_profile">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_investment_manajer">Sucorinvest Sharia Money Market Fund</string>
    <string name="type_reksadana">Pasar Uang</string>
    <string name="title_return">1 Year Return</string>
    <string name="return_one_year">+6,94%</string>
    <string name="title_expense_ratio">Expense Ratio</string>
    <string name="expense_ratio">0.45%</string>
    <string name="title_aum">Total AUM</string>
    <string name="aum">680.78B</string>
    <string name="title_top_reksa_dana">Top Reksa Dana</string>
    <string name="desc_sub_title_rd">Resiko rendah dengan return yang lebih tinggi dari deposito</string>
    <string name="title_rd">Top Reksa Dana Pasar Uang</string>
    <string name="desc_list_rd">desc_list_rd</string>
    <string name="btn_buy">Beli</string>
    <string name="btn_pay">Bayar</string>
    <string name="btn_confirm">Saya Sudah Bayar</string>
</resources>