<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".listfragment.ListReksadanaFragment">

    <LinearLayout
        android:id="@+id/list_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/secondary_primary"
            android:layout_width="match_parent"
            android:layout_height="152dp">


           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <ImageView
                   android:layout_marginTop="8dp"
                   android:layout_marginStart="30dp"
                   android:id="@+id/btn_back_to_home"
                   android:layout_width="16dp"
                   android:layout_height="16dp"
                   android:src="@drawable/btn_left_arrow"
                   />

               <TextView
                   android:layout_marginTop="4dp"
                   android:layout_centerHorizontal="true"
                   android:layout_marginStart="114dp"
                   android:id="@+id/title_top_list_reksadana"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/title_top_reksa_dana"
                   android:textStyle="bold"
                   android:textSize="16sp"
                   android:textColor="@color/black"
                   />

           </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="363dp"
                android:layout_height="80dp"
                android:background="@color/white"
                >
                
                <ImageView
                    android:id="@+id/ic_list_rd"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_list_rdpu"
                    android:contentDescription="@string/desc_list_rd" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="44dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title_list_rd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_rd"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:layout_marginTop="4dp"
                        android:id="@+id/sub_title_list_rd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="197dp"
                        android:text="@string/desc_sub_title_rd"
                        android:textSize="12sp"

                        />

                </LinearLayout>
                
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_rd"
        android:layout_marginTop="22dp"
        android:layout_below="@id/list_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</RelativeLayout>